[tool.poetry]
name = "flask-web-app"
version = "0.1.0"
description = ""
authors = ["Rebekka Haley <rebekka.haley@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_web_app"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
Flask-Login = "^0.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
