[tool.poetry]
name = "simple-flask-web-app"
version = "0.1.0"
description = ""
authors = ["Rebekka Haley <rebekka.haley@gmail.com>"]
readme = "README.md"
packages = [{include = "website"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
Flask-Login = "^0.6.2"
flask-sqlalchemy = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
